A ton of stuff, including Phyper

--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -21,6 +21,10 @@ div {
     -moz-user-select: none; /* mozilla browsers */
     -khtml-user-select: none; /* webkit (konqueror) browsers */
     -ms-user-select: none; /* IE10+ */
+    -webkit-text-size-adjust:none;
+    -ms-text-size-adjust:none;
+    -moz-text-size-adjust:none;
+    text-size-adjust:none;
 }
 
 #split {
